--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "argon2": "^0.30.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0"
