--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^3.1.0",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
-    "vite": "^4.1.0",
-    "@vitejs/plugin-react": "^3.1.0"
+    "vite": "^4.1.0"
   },
   "devDependencies": {
-    "@types/react-dom": "^18.0.10",
     "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
